# root

builtins/lhc4codec/: CMakeLists.txt
cmake/modules/: FindLHC4CODEC.cmake  RootBuildOptions.cmake  RootConfiguration.cmake  SearchInstalledSoftware.cmake
config/: RConfigure.in
core/: CMakeLists.txt
core/lhc4codec/: CMakeLists.txt  README.md
core/lhc4codec/inc/: ZipLHC4.h
core/lhc4codec/src/: ZipLHC4.cxx
core/zip/inc/: Compression.h
core/zip/src/: Compression.cxx  RZip.cxx
core/zip/test/: ZipTest.cxx
main/: CMakeLists.txt
main/src/: rntuple2rntuple.cxx  tree2ntuple.cxx
tree/ntuple/inc/ROOT/: RFieldBase.hxx  RNTupleWriteOptions.hxx  RNTupleZip.hxx
tree/ntuple/src/: RFieldBase.cxx  RPageStorage.cxx
tree/ntuple/test/: ntuple_types.cxx  ntuple_zip.cxx
tree/ntupleutil/inc/ROOT/: RNTupleImporter.hxx
tree/ntupleutil/src/: RNTupleImporter.cxx
